--- a/index.html
+++ b/index.html
@@ -1,40 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>presscottc4's landing page</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <title>bigrat.monster</title>
+    <link rel="shortcut icon" href="https://bigrat.monster/media/bigrat.png">
 </head>
 <body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-
-  <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-    <div class="container-fluid">
-      <a class="navbar-brand">prescottc4's landing page</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          <a class="nav-link" href="updatelog.html">update log</a>
+    <!-- Uses a transparent header that draws on top of the layout's background -->
+<style>
+    .demo-layout-transparent {
+      background: url('https://bigrat.monster/media/bigrat.png') center / cover;
+    }
+    .demo-layout-transparent .mdl-layout__header,
+    .demo-layout-transparent .mdl-layout__drawer-button {
+      /* This background is dark, so we set text to white. Use 87% black instead if
+         your background is light. */
+      color: rgb(255, 255, 255);
+    }
+    </style>
+    
+    <div class="demo-layout-transparent mdl-layout mdl-js-layout">
+      <header class="mdl-layout__header mdl-layout__header--transparent">
+        <div class="mdl-layout__header-row">
+          <!-- Title -->
+          <span class="mdl-layout-title">bigrat.monster</span>
+          <!-- Add spacer, to align navigation to the right -->
+          <div class="mdl-layout-spacer"></div>
+          <!-- Navigation -->
+          <nav class="mdl-navigation">
+            <a class="mdl-navigation__link" href="updatelog.html">update page</a>
+            <a class="mdl-navigation__link" href="gamepage.html">game page</a>
+            <a class="mdl-navigation__link" href="https://bigratiscool.github.io/bigratemporium/index.html">bigrats home page</a>
+            <a class="mdl-navigation__link" href="https://bigrat.monster/">bigrat.monster</a>
+          </nav>
         </div>
+      </header>
+      <div class="mdl-layout__drawer">
+        <span class="mdl-layout-title">bigrat.monster</span>
+        <nav class="mdl-navigation">
+          <a class="mdl-navigation__link" href="https://lostsoftwarearchives.neocities.org/Meow/">meow synth</a>
+          <a class="mdl-navigation__link" href="https://steamcommunity.com/profiles/76561198833176417/">steam</a>
+          <a class="mdl-navigation__link" href="https://bigrat.monster/">bigrat.monster</a>
+          <a class="mdl-navigation__link" href="https://bigrat.monster/">bigrat.monster</a>
+        </nav>
       </div>
+      <main class="mdl-layout__content">
+      </main>
     </div>
-  </nav>
-
-  <div class="textinbody" style="padding: 20px;">
-    <h1>presscott's landing page</h1>
-    <p1>cool pages within this page</p1>
-    cool gd mashups<br>
-    <a href="https://www.youtube.com/watch?v=RCTl6KhkKXE">Moves Like Jagger x stalker <br><a>
-
-      you should play tf2 NOW<br>
-    <a href="https://www.youtube.com/watch?v=y8To3vsuxCU">Team Fortress 3 - Official Reveal Trailer (Concept) <br></a>
-    <a href="https://store.steampowered.com/app/440/Team_Fortress_2/">download and play now<br>
-    <a href="https://play.geforcenow.com/games?game-id=40512534-ad27-4a12-afa7-6fc412288072&lang=en_US&asset-id=01_547b2064-13ad-4ba5-b928-d2770accddf1">play now with geforce now</a><br>
-    <a href="https://steamcommunity.com/profiles/76561198833176417/">go add me on steam<br>
-  </div>
 </body>
 </html>
+<body>
