--- a/updatelog.html
+++ b/updatelog.html
@@ -1,18 +1,43 @@
-<style>
-    body {
-        padding: 0px;
-        background-color: rgb(7, 4, 4);
-        color: rgb(71, 61, 61);
-        font-size: 15px;}
-</style>
-  <head><meta name="color-scheme" content="light dark"></head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <title>bigrat.monster update log</title>
+    <link rel="shortcut icon" href="https://bigrat.monster/media/bigrat.png">
+</head>
 <body>
-<h1>
-update log<br>
-added update log<br>
-added a button to get to the update log <br>
-update 0.1<br>
-added steam profile link<br>
-added play now with geforce now<br>
-added darkmode to update page<br>
-fixed font issues on game page<br>
+    <!-- Uses a transparent header that draws on top of the layout's background -->
+<style>
+    .demo-layout-transparent {
+      background: url('https://bigrat.monster/media/bigrat.png') center / cover;
+    }
+    .demo-layout-transparent .mdl-layout__header,
+    .demo-layout-transparent .mdl-layout__drawer-button {
+      /* This background is dark, so we set text to white. Use 87% black instead if
+         your background is light. */
+      color: rgb(255, 255, 255);
+    }
+    </style>
+    <div class="demo-layout-transparent mdl-layout mdl-js-layout">
+      <header class="mdl-layout__header mdl-layout__header--transparent">
+        <div class="mdl-layout__header-row">
+          <span class="mdl-layout-title"> <br>
+            <span class="mdl-layout-title"> <br>
+              <span class="mdl-layout-title"> <br>
+                <span class="mdl-layout-title"> <br>
+                  <span class="mdl-layout-title"> <br>
+                    <span class="mdl-layout-title"> <br>
+            added update log<br>
+            added a button to get to the update log <br>
+            update 0.1<br>
+            added steam profile link<br>
+            added play now with geforce now<br>
+            added darkmode to update page<br>
+            fixed font issues on game page<br>
+            0.2
+            </span>
