--- a/updatelog.html
+++ b/updatelog.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- Uses a transparent header that draws on top of the layout's background -->
-<style>
+<style> 
     .demo-layout-transparent {
       background: url('https://bigrat.monster/media/bigrat.png') center / cover;
     }
@@ -40,4 +40,7 @@
             added darkmode to update page<br>
             fixed font issues on game page<br>
             0.2
+            new website design<br>
+            redid game page<br>
+            added a few new games<br>
             </span>
