--- a/gamepage.html
+++ b/gamepage.html
@@ -1,14 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <title>bigrat.monster</title>
+    <link rel="shortcut icon" href="https://bigrat.monster/media/bigrat.png">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    </head>
+</head>
+<body>
+    <!-- Uses a transparent header that draws on top of the layout's background -->
 <style>
-  body {
-      padding: 0px;
-      background-color: rgb(7, 4, 4);
-      color: rgb(71, 61, 61);
-      font-size: 20px;}
-</style>
-<head><meta name="color-scheme" content="light dark"></head>
+    .demo-layout-transparent {
+      background: url('https://bigrat.monster/media/bigrat.png') center / cover;
+    }
+    .demo-layout-transparent .mdl-layout__header,
+    .demo-layout-transparent .mdl-layout__drawer-button {
+      /* This background is dark, so we set text to white. Use 87% black instead if
+         your background is light. */
+      color: rgb(255, 255, 255);
+    }
+    </style>
+     
+     <div class="demo-layout-transparent mdl-layout mdl-js-layout">
+      <header class="mdl-layout__header mdl-layout__header--transparent">
+        <div class="mdl-layout__header-row">
+          <div class="row-2">
+            <ul>
+                <li><a href="index.html" class="active"><p style="margin-top: 10px;">this is a html game list</p></a></li><br>
+                <li><a href="index.html" class="active"><p style="margin-top: 10px;">this is a html game list</p></a></li><br>
+            </ul>
 <body>
 <h1>
-  this is a list of html games anything under is a html game.Currently not finished.<br>
+  Currently not finished.<br>
   <a href="webretro-standalone.html">webretro (rom emulator)</a> <a href="https://github.com/AlexBlackmore/roms">roms<br></a>
+  <a href="C:\Users\svm31\Downloads\Five Nights at Freddy's 2 DEMO\index.html">fnaf2</a><br>
+  <a href="C:\Users\svm31\Downloads\Five Nights at Freddy's DEMO\index.html">fnaf1</a>
 </div>
 <h1>
