--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <title>bigrat.monster</title>
     <link rel="shortcut icon" href="https://bigrat.monster/media/bigrat.png">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    </head>
 </head>
 <body>
     <!-- Uses a transparent header that draws on top of the layout's background -->
@@ -54,4 +56,3 @@
     </div>
 </body>
 </html>
-<body>
