--- a/gamepage.html
+++ b/gamepage.html
@@ -38,7 +38,6 @@
 <h1>
   Currently not finished.<br>
   <a href="webretro-standalone.html">webretro (rom emulator)</a> <a href="https://github.com/AlexBlackmore/roms">roms<br></a>
-  <a href="C:\Users\svm31\Downloads\Five Nights at Freddy's 2 DEMO\index.html">fnaf2</a><br>
-  <a href="C:\Users\svm31\Downloads\Five Nights at Freddy's DEMO\index.html">fnaf1</a>
+  <a href="minesweep.html">minesweep</a><br>
 </div>
 <h1>
