--- a/gamepage.html
+++ b/gamepage.html
@@ -33,11 +33,13 @@
             <ul>
                 <li><a href="index.html" class="active"><p style="margin-top: 10px;">this is a html game list</p></a></li><br>
                 <li><a href="index.html" class="active"><p style="margin-top: 10px;">this is a html game list</p></a></li><br>
+ fnaf.html
             </ul>
 <body>
 <h1>
   Currently not finished.<br>
   <a href="webretro-standalone.html">webretro (rom emulator)</a> <a href="https://github.com/AlexBlackmore/roms">roms<br></a>
-  <a href="minesweep.html">minesweep</a><br>
+  <a href="minesweep.html">minesweep</a><br> 
+  <a href="fnaf.html">fnaf</a><br>
 </div>
 <h1>
