updated added hungergames

--- a/gamepage.html
+++ b/gamepage.html
@@ -40,6 +40,6 @@
   Currently not finished.<br>
   <a href="webretro-standalone.html">webretro (rom emulator)</a> <a href="https://github.com/AlexBlackmore/roms">roms<br></a>
   <a href="minesweep.html">minesweep</a><br> 
-  <a href="fnaf.html">fnaf</a><br>
+  <a href="hungergames.html">hungergames</a><br> 
 </div>
 <h1>
