main page rework
reworked the main page so it looks nicer. gamepage and update log will soon have a update to  update them aswell

--- a/updatelog.html
+++ b/updatelog.html
@@ -44,3 +44,11 @@
             redid game page<br>
             added a few new games<br>
             </span>
+            0.3 and 0.5
+            added minesweep added the hungergames<br>
+            tried to fix some buggs<br>
+            redesigned the home page<br>
+            removed some random shit<br>
+
+            whats planned next?<br>
+            a remake of gamepage and update page updaing them to the newer style<br>
