changed some stuff
visit the update log for all updates
optimized and made the code look nicer and removed unneeded code

--- a/updatelog.html
+++ b/updatelog.html
@@ -4,24 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <title>bigrat.monster update log</title>
-    <link rel="shortcut icon" href="https://bigrat.monster/media/bigrat.png">
+    <link rel="shortcut icon" href="">
+    <body style="background-color:#353434;"></body>
+    <a href="index.html">return to home</a><br>
 </head>
 <body>
-    <!-- Uses a transparent header that draws on top of the layout's background -->
-<style> 
-    .demo-layout-transparent {
-      background: url('https://bigrat.monster/media/bigrat.png') center / cover;
-    }
-    .demo-layout-transparent .mdl-layout__header,
-    .demo-layout-transparent .mdl-layout__drawer-button {
-      /* This background is dark, so we set text to white. Use 87% black instead if
-         your background is light. */
-      color: rgb(255, 255, 255);
-    }
     </style>
     <div class="demo-layout-transparent mdl-layout mdl-js-layout">
       <header class="mdl-layout__header mdl-layout__header--transparent">
@@ -49,6 +37,13 @@
             tried to fix some buggs<br>
             redesigned the home page<br>
             removed some random shit<br>
-
+            0.6  9/10/2023<br>
+            removed some broken textures and made gamepage and update log more empty<br>
+            made all sites gray<br>
+            <span class="mdl-layout-title"> <br>
+              <span class="mdl-layout-title"> <br>
             whats planned next?<br>
             a remake of gamepage and update page updaing them to the newer style<br>
+            <span class="mdl-layout-title"> <br>
+              <span class="mdl-layout-title"> <br>
+            also big thanks to boostrap for all the resourses for the homepage. 
