--- a/gamepage.html
+++ b/gamepage.html
@@ -4,42 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <title>bigrat.monster</title>
     <link rel="shortcut icon" href="https://bigrat.monster/media/bigrat.png">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
 </head>
 <body>
-    <!-- Uses a transparent header that draws on top of the layout's background -->
-<style>
-    .demo-layout-transparent {
-      background: url('https://bigrat.monster/media/bigrat.png') center / cover;
-    }
-    .demo-layout-transparent .mdl-layout__header,
-    .demo-layout-transparent .mdl-layout__drawer-button {
-      /* This background is dark, so we set text to white. Use 87% black instead if
-         your background is light. */
-      color: rgb(255, 255, 255);
-    }
-    </style>
-     
-     <div class="demo-layout-transparent mdl-layout mdl-js-layout">
-      <header class="mdl-layout__header mdl-layout__header--transparent">
-        <div class="mdl-layout__header-row">
-          <div class="row-2">
-            <ul>
-                <li><a href="index.html" class="active"><p style="margin-top: 10px;">this is a html game list</p></a></li><br>
-                <li><a href="index.html" class="active"><p style="margin-top: 10px;">this is a html game list</p></a></li><br>
- fnaf.html
+  <body style="background-color:#353434;"></body>
+  <a href="index.html">return to home</a><br>
             </ul>
 <body>
 <h1>
-  Currently not finished.<br>
+  Currently not finished.send html game suggestions to lunarrbro@gmail.com<br>
   <a href="webretro-standalone.html">webretro (rom emulator)</a> <a href="https://github.com/AlexBlackmore/roms">roms<br></a>
   <a href="minesweep.html">minesweep</a><br> 
-  <a href="hungergames.html">hungergames</a><br> 
 </div>
 <h1>
