--- a/updatelog.html
+++ b/updatelog.html
@@ -42,8 +42,12 @@
             made all sites gray<br>
             <span class="mdl-layout-title"> <br>
               <span class="mdl-layout-title"> <br>
+                0.7 9/11/2023<br>
+                worked a little on the index page<br>
+                added some code for icons<br>
+                added icons <br>
             whats planned next?<br>
-            a remake of gamepage and update page updaing them to the newer style<br>
+          i have no idea what to make next<br>
             <span class="mdl-layout-title"> <br>
               <span class="mdl-layout-title"> <br>
             also big thanks to boostrap for all the resourses for the homepage. 
