--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en" data-bs-theme="dark">
   <head><script src="../assets/js/color-modes.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,8 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
-    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">    
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -155,7 +155,7 @@
 
     <div class="p-5 mb-4 bg-body-tertiary rounded-3">
       <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">sleepy cat</h1>
+        <h1 class="display-5 fw-bold">sleepy cat <i class="bi bi-controller"></i></h1>
         <p class="col-md-8 fs-4">welcome to sleepy cats landing page games are still being added and more changes click the button to go to the game page</p>
         <a href="gamepage.html">games page</a><br> 
       </div>
@@ -164,14 +164,14 @@
     <div class="row align-items-md-stretch">
       <div class="col-md-6">
         <div class="h-100 p-5 text-bg-dark rounded-3">
-          <h2>go to the update page</h2>
+          <h2>the update page <i class="bi bi-card-text"></i></h2>
           <p>see all new changes and other stuff that has happend to the website</p>
           <a href="updatelog.html">update page</a><br> 
         </div>
       </div>
       <div class="col-md-6">
         <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-          <h2>extras</h2>
+          <h2>extras <i class="bi bi-hourglass-top"></i></h2>
           <p>coming next update...</p>
           <a href=""></a><br> 
         </div>
@@ -179,7 +179,7 @@
     </div>
 
     <footer class="pt-3 mt-4 text-body-secondary border-top">
-      &copy; 2023 sleepy cat
+      &copy; 2023 sleepy cat update 0.7 <i class="bi bi-heart-fill"></i>
     </footer>
   </div>
 </main>
