--- a/gamepage.html
+++ b/gamepage.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bigrat.monster</title>
-    <link rel="shortcut icon" href="https://bigrat.monster/media/bigrat.png">
+    <title>gpage</title>
+    <link rel="shortcut icon" href="https://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/2459330/11bbadea5154c316c883df0f3f1944395b3715b8.gif">
     </head>
 </head>
 <body>
@@ -14,7 +14,7 @@
             </ul>
 <body>
 <h1>
-  Currently not finished.send html game suggestions to lunarrbro@gmail.com<br>
+  Currently not finished<br>
   <a href="webretro-standalone.html">webretro (rom emulator)</a> <a href="https://github.com/AlexBlackmore/roms">roms<br></a>
   <a href="minesweep.html">minesweep</a><br> 
 </div>
