--- a/updatelog.html
+++ b/updatelog.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bigrat.monster update log</title>
-    <link rel="shortcut icon" href="">
-    <body style="background-color:#353434;"></body>
+    <title>update log</title>
+    <link rel="shortcut icon" href="https://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/2459330/11bbadea5154c316c883df0f3f1944395b3715b8.gif">
+    <body style="background-color:#787878;"></body>
     <a href="index.html">return to home</a><br>
 </head>
 <body>
@@ -46,6 +46,13 @@
                 worked a little on the index page<br>
                 added some code for icons<br>
                 added icons <br>
+                0.8 9/15/2023<br>
+                added extras<br>
+                added new links to extras<br>
+                fixed icons not loading<br>
+                changed url<br>
+              
+
             whats planned next?<br>
           i have no idea what to make next<br>
             <span class="mdl-layout-title"> <br>
