--- a/gamepage.html
+++ b/gamepage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gpage</title>
-    <link rel="shortcut icon" href="https://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/2459330/11bbadea5154c316c883df0f3f1944395b3715b8.gif">
+    <link rel="shortcut icon" href="jinx.jpeg">
     </head>
 </head>
 <body>
@@ -17,5 +17,6 @@
   Currently not finished<br>
   <a href="webretro-standalone.html">webretro (rom emulator)</a> <a href="https://github.com/AlexBlackmore/roms">roms<br></a>
   <a href="minesweep.html">minesweep</a><br> 
+  <a href="hunger.html">hungergames</a><br> 
 </div>
 <h1>
