--- a/extras.html
+++ b/extras.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>extras</title>
-    <link rel="shortcut icon" href="https://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/2459330/11bbadea5154c316c883df0f3f1944395b3715b8.gif">
+    <link rel="shortcut icon" href="jinx.jpeg">
     </head>
 </head>
 </head>
