--- a/updatelog.html
+++ b/updatelog.html
@@ -51,9 +51,16 @@
                 added new links to extras<br>
                 fixed icons not loading<br>
                 changed url<br>
+                0.9 9/21/2023 
+                added hungergames<br>
+                fixed some issues<br>.
               
 
-            whats planned next?<br>
+            whats planned for update 1.0?
+            implimentation for flash games. 
+            new html games 
+            ect.
+            
           i have no idea what to make next<br>
             <span class="mdl-layout-title"> <br>
               <span class="mdl-layout-title"> <br>
