--- a/gamepage.html
+++ b/gamepage.html
@@ -14,9 +14,14 @@
             </ul>
 <body>
 <h1>
-  Currently not finished<br>
+  Currently not finished<br> all games will be checked weekly to make sure they are working and not blocked<br>
   <a href="webretro-standalone.html">webretro (rom emulator)</a> <a href="https://github.com/AlexBlackmore/roms">roms<br></a>
   <a href="minesweep.html">minesweep</a><br> 
-  <a href="hunger.html">hungergames</a><br> 
-</div>
+  <a href="hunger.html">hungergames</a><br>
+  <a href="https://kripken.github.io/BananaBread/cube2/bb.html">cube 2 shooter old </a><br>
+  <a href="https://sourga.me/">cube 2 shooter new </a><br>
+  <a href="https://sleepy-cat-1.github.io/3d.city/">city builder </a><br>
+  <a href="cubeeng.html">cube Cube-engine</a><br>
+
+</div> 
 <h1>
