--- a/updatelog.html
+++ b/updatelog.html
@@ -54,11 +54,12 @@
                 0.9 9/21/2023 
                 added hungergames<br>
                 fixed some issues<br>.
+                0.92<br>
+                fixed a few games<br>
               
 
             whats planned for update 1.0?
-            implimentation for flash games. 
-            new html games 
+            new html games
             ect.
             
           i have no idea what to make next<br>
