removed banana bread.
banana bread was removed due to issues and incorrect loading in some cases. also poor performance

--- a/gamepage.html
+++ b/gamepage.html
@@ -14,12 +14,11 @@
             </ul>
 <body>
 <h1>
-  Currently not finished<br> all games will be checked weekly to make sure they are working and not blocked. please note some sites will be blocked soon and as of update 0.9 im unable to clone them<br> 
+  Currently not finished<br>
   if the site gets banned please check on another device in a few days il open a new repo with a redirect link to it<br>
   <a href="webretro-standalone.html">webretro (rom emulator)</a> <a href="https://github.com/AlexBlackmore/roms">roms for webretro<br></a>
   <a href="minesweep.html">minesweep</a><br> 
   <a href="hunger.html">hungergames</a><br>
-  <a href="bb.html">banana bread shooter</a><br>
   <a href="https://sleepy-cat-1.github.io/3d.city/">city builder </a><br>
   <a href="cubeeng.html">cube Cube-engine</a><br>  
   <a href="https://kripken.github.io/misc-js-benchmarks/banana/index.html">new banana bread shooter most likely blocked</a><br>
