--- a/secret.html
+++ b/secret.html
@@ -1,1 +1,5 @@
-<embed type="text/html" src="https://cdn.discordapp.com/attachments/365771941514313729/1144705678548664360/rat_brick.mp4" width="1" height="1">
+
+<embed type="text/html" src="secret.html.mp4" width="800" height="800">
+    <br>
+    this secret helps to have more people look at the repository<br>
+    have a great day!<br>
