--- a/gamepage.html
+++ b/gamepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>gpage</title>
+    <title>html-games</title>
     <link rel="shortcut icon" href="jinx.jpeg">
     </head>
 </head>
