testing. added a music file

--- a/index.html
+++ b/index.html
@@ -165,15 +165,15 @@
     <div class="row align-items-md-stretch">
       <div class="col-md-6">
         <div class="h-100 p-5 text-bg-dark rounded-3">
-          <h2>the update page <i class="bi bi-card-text"></i></h2>
-          <p>see all new changes and other stuff that has happend to the website</p>
+          <h2>the update page (moving to extras soon)<i class="bi bi-card-text"></i></h2>
+          <p>see all new changes and other stuff that has happend to the website soon to be moved to the extras tab to make room for more important stuff</p>
           <a href="updatelog.html">update page</a><br> 
         </div>
       </div>
       <div class="col-md-6">
         <div class="h-100 p-5 bg-body-tertiary border rounded-3">
           <h2>extras <i class="bi bi-folder-plus"></i></h2>
-          <p>out now new stuff coming soon</p>
+          <p>come on in and check it out. lots of stuff you might love!</p>
           <a href="extras.html">go to extras now</a><br> 
         </div>
       </div>
