--- a/extras.html
+++ b/extras.html
@@ -17,4 +17,5 @@
 
 <a href="https://05konz.github.io/Blooket-Cheats/">blooket cheats (java script must be on)</a><br>
 <a href="https://bigratiscool.github.io/bigratemporium/">bigrats emporium(friends site)</a><br>
+<a href="jazz.html">some calm jazz</a><br>
 
