--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
     <div class="row align-items-md-stretch">
       <div class="col-md-6">
         <div class="h-100 p-5 text-bg-dark rounded-3">
-          <h2>the update page (moving to extras soon)<i class="bi bi-card-text"></i></h2>
-          <p>see all new changes and other stuff that has happend to the website soon to be moved to the extras tab to make room for more important stuff</p>
-          <a href="updatelog.html">update page</a><br> 
+          <h2>coming soon</h2>
+          <p></p>
+          <a href=""></a><br> 
         </div>
       </div>
       <div class="col-md-6">
