--- a/music/jazz.html
+++ b/music/jazz.html
@@ -1,5 +1,10 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+</head>
+<body>
+  <h1></h1>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+</body>
+</html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
@@ -27,20 +32,8 @@
     </div>
   </div>
 </nav>
-<meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>extras</title>
-    <link rel="shortcut icon" href="jinx.jpeg">
-    </head>
-</head>
-</head>
-<body>
-  <body style="background-color:#aaa8a8;"></body>
-  <a href="index.html">return to home</a><br>
-            </ul>
-<body>
-  <a href="updatelog.html">uodate page</a><br> 
-<a href="https://05konz.github.io/Blooket-Cheats/">blooket cheats (java script must be on)</a><br>
-<a href="https://bigratiscool.github.io/bigratemporium/">bigrats emporium (friends site)</a><br>
-<a href="music/jazz.html">some calm jazz</a><br>
+contains some jazzy and relaxing music.<br>
+<audio controls>
+    <source src="y2mate.com - Billie Holiday  Solitude Audio - Copy.mp3" type="audio/mp3">
+  Your browser does not support the audio element.
+  </audio>
