--- a/extras.html
+++ b/extras.html
@@ -40,7 +40,7 @@
   <a href="index.html">return to home</a><br>
             </ul>
 <body>
-  <a href="updatelog.html">uodate page</a><br> 
+  <a href="updatelog.html">update page</a><br> 
 <a href="https://05konz.github.io/Blooket-Cheats/">blooket cheats (java script must be on)</a><br>
 <a href="https://bigratiscool.github.io/bigratemporium/">bigrats emporium (friends site)</a><br>
 <a href="music/jazz.html">some calm jazz</a><br>
