--- a/updatelog.html
+++ b/updatelog.html
@@ -1,3 +1,32 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html">return home</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true"></a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +36,6 @@
     <title>update log</title>
     <link rel="shortcut icon" href="jinx.jpeg">
     <body style="background-color:#787878;"></body>
-    <a href="index.html">return to home</a><br>
 </head>
 <body>
     </style>
@@ -15,11 +43,6 @@
       <header class="mdl-layout__header mdl-layout__header--transparent">
         <div class="mdl-layout__header-row">
           <span class="mdl-layout-title"> <br>
-            <span class="mdl-layout-title"> <br>
-              <span class="mdl-layout-title"> <br>
-                <span class="mdl-layout-title"> <br>
-                  <span class="mdl-layout-title"> <br>
-                    <span class="mdl-layout-title"> <br>
             added update log<br>
             added a button to get to the update log <br>
             update 0.1<br>
@@ -56,6 +79,11 @@
                 fixed some issues<br>.
                 0.92<br>
                 fixed a few games<br>
+                0.93<br>
+                added navi bar to most parts of the site.<br>
+                fixed a spelling error on extras<br>
+              extras added link to bigrats emporium & link to update page and new jazz page<br>
+              1.0 is in works gimme a little<br>
               
                 a little update of why no new updates and thats cause 1 im tired and 2 i dont feel implimenting ruffles.<br>
                 update 10/18/2023<br>
