--- a/updatelog.html
+++ b/updatelog.html
@@ -12,13 +12,11 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link" href="gamepage.html">go to gamepage</a>
+        </li>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"></a>
+          <a class="nav-link" href="updatelog.html">update log</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" aria-disabled="true"></a>
