added some new games

--- a/gamepage.html
+++ b/gamepage.html
@@ -40,18 +40,22 @@
 <body>
 <h1>
   Currently not finished<br>
-  <a href="webretro-standalone.html">webretro (rom emulator)</a> <a href="https://github.com/AlexBlackmore/roms">roms for webretro<br></a>
+  <a href="htmlgames/webretro-standalone.html">webretro (rom emulator)</a> <a href="https://github.com/AlexBlackmore/roms">roms for webretro<br></a>
   <a href="htmlgames/cookieclicker-2.052/cookie clicker.html">cookie clicker</a><br> 
   <a href="htmlgames/slope/slopegame.html">slope</a><br> 
   <a href="htmlgames/chromedino/chromedino.html">chrome dino</a><br> 
+  <a href="htmlgames/menja/src/menja.html">menja</a><br>
+  <a href="htmlgames/tanuki-sunset/tanuki sunset.html">tanuki sunset</a><br>
+  <a href="htmlgames/platform-game-engine/platform-game-engine/src/index.html">platform ball game</a><br>
   <a href="htmlgames/mcclassic/mc classic.html">minecraft classic</a><br>
-  <a href="htmlgames/sm64/sm64.html">super mario  64</a><br>  
+  <a href="htmlgames/sm64/sm64.html">super mario 64</a><br>  
+  <a href="https://prescottc4.github.io/fnaf-demos-html/">FNAF DEMO'S</a><br> 
   <a href="htmlgames/2048/2048.html">2048</a><br>  
   <a href="htmlgames/wolfen/wolfengame.html">wolfen</a><br>  
   <a href="htmlgames/retrobowl/retrobowl.html">retrobowl</a><br>  
   <a href="minesweep.html">minesweep</a><br> 
-  <a href="hunger.html">hungergames</a><br>
+  <a href="htmlgames/hunger.html">hungergames</a><br>
   <a href="https://sleepy-cat-1.github.io/3d.city/">city builder </a><br>
-  <a href="cubeeng.html">cube Cube-engine</a><br>  
+  <a href="htmlgames/cubeeng.html">cube Cube-engine</a><br>  
 </div> 
 <h1>
