--- a/gamepage.html
+++ b/gamepage.html
@@ -45,7 +45,8 @@
   <a href="htmlgames/slope/slopegame.html">slope</a><br> 
   <a href="htmlgames/chromedino/chromedino.html">chrome dino</a><br> 
   <a href="htmlgames/exo/EXO.html">EXO</a><br> 
-  <a href="htmlgames/menja/src/menja.html">menja</a><br>
+  <a href="htmlgames/backrooms/backrooms.html">backrooms (horror game)</a><br> 
+  <a href="htmlgames/menja/dist/menja.html">menja</a><br>
   <a href="htmlgames/tanuki-sunset/tanuki sunset.html">tanuki sunset</a><br>
   <a href="htmlgames/mcclassic/mc classic.html">minecraft classic</a><br>
   <a href="htmlgames/sm64/sm64.html">super mario 64</a><br>  
