--- a/extras.html
+++ b/extras.html
@@ -38,6 +38,7 @@
             </ul>
 <body>
   <a href="updatelog.html">update page</a><br> 
-<a href="https://05konz.github.io/Blooket-Cheats/">blooket cheats (java script must be on)</a><br>
 <a href="https://bigratiscool.github.io/bigratemporium/">bigrats emporium (friends site)</a><br>
 <a href="music/jazz.html">some calm jazz</a><br>
+<a href="secret.html">some random secret that i added here</a><br>
+<a herf="weeklymusic/weeklymusic.html">coming soon.. (weekly song)</a>
