--- a/extras.html
+++ b/extras.html
@@ -41,4 +41,4 @@
 <a href="https://bigratiscool.github.io/bigratemporium/">bigrats emporium (friends site)</a><br>
 <a href="music/jazz.html">some calm jazz</a><br>
 <a href="secret.html">some random secret that i added here</a><br>
-<a herf="weeklymusic/weeklymusic.html">coming soon.. (weekly song)</a>
+<a href="weeklymusic/weeklymusic.html">weekly music</a><br>
