--- a/gamepage.html
+++ b/gamepage.html
@@ -55,7 +55,8 @@
   <a href="htmlgames/wolfen/wolfengame.html">wolfen</a><br>  
   <a href="htmlgames/retrobowl/retrobowl.html">retrobowl</a><br>  
   <a href="minesweep.html">minesweep</a><br> 
-  <a href="htmlgames/hungergames/hunger.html">hungergames</a><br>
+  <a href="htmlgames/edgenotfound/edge not found.html">edge not found</a><br> 
+  <a href="htmlgames/hungergames/hunger.html">hungergames (BROKEN RIGHT NOW)</a><br>
   <a href="https://sleepy-cat-1.github.io/3d.city/">city builder </a><br>
   <a href="htmlgames/cubeeng.html">cube Cube-engine</a><br>  
 </div> 
