--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
     <div class="row align-items-md-stretch">
       <div class="col-md-6">
         <div class="h-100 p-5 text-bg-dark rounded-3">
-          <h2>coming soon</h2>
-          <p></p>
-          <a href=""></a><br> 
+          <h2>bigrat.monster <img src="bigrathemasive.png" alt="" width="50" height="50"></p>
+          <p>bigrat.monster is a great project and i hope you come to love it as much as i do. it will be hosted here forever.</p>
+          <a href="bigrat.monster-main/index.html">go and visit the big rat</a><br> 
         </div>
       </div>
       <div class="col-md-6">
