--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<script src="test.js"></script>
+<script src="test.html"></script>
 <!doctype html>
 <html lang="en" data-bs-theme="dark">
   <head><script src="../assets/js/color-modes.js"></script>
